# OpenRDM

./: .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO  TODO.md  _h_d_f5___read___chunked_8cc.html  _h_d_f5___read___chunked_8cc.js  _h_d_f5___read___chunked_8h.html  _h_d_f5___read___chunked_8h_source.html  _h_d_f5___read___compact_8cc.html  _h_d_f5___read___compact_8cc.js  _h_d_f5___read___compact_8h.html  _h_d_f5___read___compact_8h_source.html  _h_d_f5___read___contiguous_8cc.html  _h_d_f5___read___contiguous_8cc.js  _h_d_f5___read___contiguous_8h.html  _h_d_f5___read___contiguous_8h_source.html  _h_d_f5___write___chunked_8cc.html  _h_d_f5___write___chunked_8cc.js  _h_d_f5___write___chunked_8h.html  _h_d_f5___write___chunked_8h_source.html  _h_d_f5___write___compact_8cc.html  _h_d_f5___write___compact_8cc.js  _h_d_f5___write___compact_8h.html  _h_d_f5___write___compact_8h_source.html  _h_d_f5___write___contiguous_8cc.html  _h_d_f5___write___contiguous_8cc.js  _h_d_f5___write___contiguous_8h.html  _h_d_f5___write___contiguous_8h_source.html  _h_d_f5_chunked_factory_8h.html  _h_d_f5_chunked_factory_8h_source.html  _h_d_f5_client_8cc.html  _h_d_f5_client_8h.html  _h_d_f5_client_8h_source.html  _h_d_f5_compact_factory_8h.html  _h_d_f5_compact_factory_8h_source.html  _h_d_f5_contiguous_factory_8h.html  _h_d_f5_contiguous_factory_8h_source.html  (+255 more)
cmake/: custom_color_messages.cmake  hdf5Config.h.in  openrdmConfig.cmake.in  openrdmConfig.h.in
data/: README.txt
doc/: Doxyfile  dependencies.md  doxygen_extra.css  introduction.md  mainpage.md  test.md  theory.md
doc/doc_files/: acknowledgments.md  dependencies.md  howtouse.md  installation.md  introduction.md  issues.md  mainpage.md  openrdm.md  releases.md  runningtests.md  theory.md  todo.md  workwithpsi4.md
doc/doc_files/releases/: v0.0.0.md  v0.1.0-0.1.0.md  v0.1.0-0.2.0.md  v0.1.0-0.4.0.md  v0.1.0-1.0.0.md  v0.1.0.md  v0.2.0.md
doc/xml_files/: doxygen_layout.xml
doc_files/: acknowledgments.md  howtouse.md  introduction.md  mainpage.md  notes.md  todo.md
doc_files/releases/: v0.1.0-0.3.0.md
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  (+77 more)
src/: CMakeLists.txt  diskRW.h  energy.cc  energy.h  functional.cc  functional.h  libMem.cc  libMem.h  main.cc  mcpdft.cc  mcpdft.h  memRW.cc  memRW.h  rdmInterface.h  utility.cc
src/libfunc/: CMakeLists.txt  functional.cc  functional.h
src/libio/: CMakeLists.txt  HDF5ChunkedFactory.h  HDF5Client.cc  HDF5Client.h  HDF5CompactFactory.h  HDF5ContiguousFactory.h  HDF5ErrorManager.cc  HDF5ErrorManager.h  HDF5Factory.h  HDF5Utility.cc  HDF5Utility.h  HDF5_Read.cc  HDF5_Read.h  HDF5_Read_Chunked.cc  HDF5_Read_Chunked.h  HDF5_Read_Compact.cc  HDF5_Read_Compact.h  HDF5_Read_Contiguous.cc  HDF5_Read_Contiguous.h  HDF5_Read_Sparse.cc  HDF5_Write.cc  HDF5_Write.h  HDF5_Write_Chunked.cc  HDF5_Write_Chunked.h  HDF5_Write_Compact.cc  HDF5_Write_Compact.h  HDF5_Write_Contiguous.cc  HDF5_Write_Contiguous.h  IOFactory.cc  IOFactory.h  IRead.h  IWrite.h  TOC.h  diskRW.cc  diskRW.h  memRW.cc  memRW.h  rdmInterface.h
src/libmcpdft/: CMakeLists.txt  energy.cc  energy.h  mcpdft.cc  mcpdft.h  utility.cc
src/libmem/: CMakeLists.txt  libMem.cc  libMem.h
src/libpsi4/: CMakeLists.txt  lsda_gga_functionals.cc  mcpdft_solver.cc  mcpdft_solver.h  plugin.cc  pymodule.py  read_opdm.cc  read_range_separated_integrals.cc  read_tpdm.cc  rs_functionals.cc
src/libpyscf/: h2_pyscf_mcscf.py  h2_pyscf_pybind.py  libpyscf.py
tests/: CMakeLists.txt  h2_pyscf.py  h2_pyscf_hdf5.py  h2_pyscf_mcscf.py  h2_pyscf_pybind.py  libpyscf.py  main.cc  opdm.h5  utility.cc
tests/h2_svwn_sto3g/: cmat.txt  eclass.txt  eref.txt
tests/h2_tpbe_sto3g/: README.txt  eref.txt  orbitals.txt
tests/h2_tsvwn_sto3g/: opdm.txt
